implémentation de l'adapter récupérant le fichier csv rnc